# mcp-memento

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  context-keeper.yaml  context-server.yaml  context_keeper.py  context_server.py  docker-compose.yml  example.py  fix_models.py  memento.yaml  memorygraph.yaml  pyproject.toml  requirements-dev.txt  run_mcp_memento.py  server.json
.claude/: settings.local.json
.github/workflows/: publish-mcp-registry.yml  zed-stub-dev.yml  zed-stub-release.yml
.mcp-memento/: config.yaml
context_keeper/: __init__.py  cli.py  config.py  models.py  server.py
context_keeper/database/: engine.py  interface.py
context_keeper/tools/: memory_tools.py  registry.py  search_tools.py
context_keeper/utils/: __init__.py  error_handling.py  (+2 more)
context_server/: __init__.py  __main__.py  advanced_tools.py  cli.py  config.py  server.py
docs/: AGENT_CONFIGURATION.md  DECAY_SYSTEM.md  DEV.md  INTEGRATION.md  README.md  RELATIONSHIPS.md  RULES.md  TOOLS.md  zed_mcp_config.json
scripts/: README.md  build.bat  build_memento.py  deploy.py  robot.py
test/: run_tests.py  test_import.json  test_relationships.py  test_tools.py
tests/: README.md  run_tests.bat  run_tests.py  run_tests.sh  test_bug_regressions.py  test_bug_regressions_v2.py  test_cli.py  test_confidence_system.py  test_context_extractor.py  test_fts_integration.py  test_pagination.py  test_project_detection.py  test_relationships.py  test_server_startup.py  test_standard_pytest.py  test_tools.py
user_memory/: __init__.py
(+56 files in other folders)
